--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <main>
         <div class="container">
             <div class="game">
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
-                <button class="box1"></button>
+                <button class="box1" aria-label="Cell 1"></button>
+                <button class="box1" aria-label="Cell 2"></button>
+                <button class="box1" aria-label="Cell 3"></button>
+                <button class="box1" aria-label="Cell 4"></button>
+                <button class="box1" aria-label="Cell 5"></button>
+                <button class="box1" aria-label="Cell 6"></button>
+                <button class="box1" aria-label="Cell 7"></button>
+                <button class="box1" aria-label="Cell 8"></button>
+                <button class="box1" aria-label="Cell 9"></button>
             </div>
         </div>
         <button id="reset-btn">Reset Game</button>
